# libbkmeans

./: CMakeLists.txt  COPYING.libbkmeans  README.md  dox.in
include/: bbowdescriptor.h  bbowtrainer.h  bkmeans.h  custom.h  export.h
src/: bbowdescriptor.cpp  bbowtrainer.cpp  bkmeans.cpp
tests/: CMakeLists.txt  cluster.cpp  clustercv.cpp
